# lpcompare

./: .gitignore  CMakeLists.txt  build_web.sh  build_web_emsdk_container.sh  build_web_podman.bat
.github/workflows/: build-web.yml
dep/: CMakeLists.txt
dep/HiGHS/: .gitignore
dep/lp_solve_5.5/: CMakeLists.txt
example/: test.lp  test.mps
src/: main.cpp
webapp/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.css  App.tsx  LpSolver.tsx  SimplexFile.tsx  SimplexMPS.tsx  SimplexTable.tsx  samples.ts
